// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BubbleChartDescriptor should generate embedding code with height as number 1`] = `
"import React from \\"react\\";
import { idRef, newAttribute, newMeasure } from \\"@gooddata/sdk-model\\";
import { BubbleChart } from \\"@gooddata/sdk-ui-charts\\";

const xAxisMeasure = newMeasure(idRef(\\"aangOxLSeztu\\", \\"measure\\"), m => m.localId(\\"m_aangOxLSeztu\\"));
const viewBy = newAttribute(idRef(\\"label.owner.region\\", \\"displayForm\\"), a => a.localId(\\"a_label.owner.region\\"));
const style = { height: 1000 };

function MyComponent() {
    return (
        <div style={style}>
            <BubbleChart
                xAxisMeasure={xAxisMeasure}
                viewBy={viewBy}
            />
        </div>
    );
}
"
`;

exports[`BubbleChartDescriptor should generate embedding code with height as string 1`] = `
"import React from \\"react\\";
import { idRef, newAttribute, newMeasure } from \\"@gooddata/sdk-model\\";
import { BubbleChart } from \\"@gooddata/sdk-ui-charts\\";

const xAxisMeasure = newMeasure(idRef(\\"aangOxLSeztu\\", \\"measure\\"), m => m.localId(\\"m_aangOxLSeztu\\"));
const viewBy = newAttribute(idRef(\\"label.owner.region\\", \\"displayForm\\"), a => a.localId(\\"a_label.owner.region\\"));
const style = { height: \\"20rem\\" };

function MyComponent() {
    return (
        <div style={style}>
            <BubbleChart
                xAxisMeasure={xAxisMeasure}
                viewBy={viewBy}
            />
        </div>
    );
}
"
`;

exports[`BubbleChartDescriptor should generate embedding code without height 1`] = `
"import React from \\"react\\";
import { idRef, newAttribute, newMeasure } from \\"@gooddata/sdk-model\\";
import { BubbleChart } from \\"@gooddata/sdk-ui-charts\\";

const xAxisMeasure = newMeasure(idRef(\\"aangOxLSeztu\\", \\"measure\\"), m => m.localId(\\"m_aangOxLSeztu\\"));
const viewBy = newAttribute(idRef(\\"label.owner.region\\", \\"displayForm\\"), a => a.localId(\\"a_label.owner.region\\"));
const style = { height: 400 };

function MyComponent() {
    return (
        <div style={style}>
            <BubbleChart
                xAxisMeasure={xAxisMeasure}
                viewBy={viewBy}
            />
        </div>
    );
}
"
`;
